# qcm_wed

./: .INSTALL.swo  .gitignore  CMakeLists.txt  ED_object_list.txt  INSTALL  README.md  makefile.mk  pyproject.toml  qcm_object_list.txt  setup.py
CC/: makefile
M1/: Makefile  conda.mk  fat.sh
doc/: Makefile  makedoc
doc/parallel_study/: CUBACORES.txt  OMP.txt  model_2x2x2.py  plot.py  speedup_omp.sh
doc/source/: defining_models.rst  h8.asy  index.rst  intro.rst  models.rst  options.rst  options_intro.txt  parameters.rst
docs/: index.md
docs/parallel_study/: debug_10min.py
docs/source/: conf.py  intro.rst
examples/1D_2_4b/: averages.tsv  cdmft.tsv  cdmft_iter.tsv  debug.py  debug_dvmc.py  dos.tsv  model_1D_2_4b.py
examples/1D_4/: ave.tsv  debug.py  debug_cdw.py  debug_dvmc.py  model_1D_4.py  record.py  sef.tsv
linux/: Makefile
mac/: makefile
mac2011/: makefile
mac_ED/: makefile
notebooks/: AF_VCA_vs_L.ipynb  CDW_1D.ipynb  Mott_Weyl.ipynb  Mott_transition_graphene_CDMFT.ipynb  Rashba_coupling.ipynb  antiferromagnetism_VCA.ipynb  dimerization_1D.ipynb  intro1.ipynb  intro2.ipynb  intro3.ipynb  periodic_cluster.ipynb  superconductivity_VCA.ipynb
pyqcm/: GS.tsv  Kolmogorov_Smirnov.py  __init__.py  berry.py  cdmft.py  cdw.py  dca.py  draw_operator.py  dvmc.py  hartree.py  loop.py  model.out  profile.py  sef.tsv  slab.py  spectral.py  variable_parameter.py  vca.py
src_ed/: CSR_hermitian.hpp  Davidson.hpp  ED_basis.cpp  ED_basis.hpp  HS_Hermitian_operator.hpp  HS_anomalous_operator.hpp  HS_factorized_operator.hpp  HS_interaction_operator.hpp  HS_nondiagonal_operator.hpp  HS_one_body_operator.hpp  Hamiltonian.hpp  Heisenberg_operator.cpp  Heisenberg_operator.hpp  Hermitian_operator.hpp  Hund_operator.hpp  Lanczos.hpp  Q_matrix.hpp  Q_matrix_set.hpp  anomalous_operator.hpp  binary_state.cpp  binary_state.hpp  continued_fraction.cpp  continued_fraction_set.cpp  continued_fraction_set.hpp  destruction_operator.cpp  general_interaction_operator.hpp  interaction_operator.hpp  matrix_element.hpp  model.cpp  model.hpp  model_instance.cpp  model_instance.hpp  model_instance_base.cpp  model_instance_base.hpp  one_body_operator.hpp  qcm_ED.cpp  qcm_ED.hpp  sector.hpp  state.hpp  symmetry_group.cpp  (+1 more)
src_ed/Hamiltonian/: Hamiltonian_CSR.hpp  Hamiltonian_Dense.hpp  Hamiltonian_Eigen.hpp  Hamiltonian_Factorized.hpp  Hamiltonian_OnTheFly.hpp  Hamiltonian_Operator.hpp  Hamiltonian_PETSc.hpp  Hamiltonian_base.hpp  Lanczos.hpp  PRIMME_solver.hpp
src_ed/Operators/: HS_Hermitian_operator.hpp  HS_factorized_operator.hpp  HS_nondiagonal_operator.hpp  Heisenberg_operator.hpp  Hund_operator.hpp  general_interaction_operator.hpp
src_python/: common_Py.cpp  common_Py.hpp  qcm_ED_lib.cpp  qcm_ED_wrap.hpp  qcm_lib.cpp  qcm_wrap.hpp
src_qcm/: CPT.cpp  Chern.cpp  QCM.cpp  QCM.hpp  average.cpp  lattice3D.cpp  lattice_model.cpp  lattice_model.hpp  lattice_model_instance.cpp  lattice_model_instance.hpp  parameter_set.cpp  parameter_set.hpp  print.cpp  profile.cpp
src_util/: ED_global_parameter.cpp  cblas.h  clapack.h  console.cpp  console.hpp  global_parameter.cpp  global_parameter.hpp  integrate.cpp  integrate.hpp  lapack-blas.h  matrix.cpp  matrix.hpp  parser.cpp  parser.hpp  types.hpp  vector_num.cpp  vector_num.hpp
tests/: averages.tsv  model_1D_4.py  model_2x2_C2.py  record_2x2.py  record_2x2_8b.py  record_WSM.py  record_WSM2.py  sef.tsv  test_all.py  test_averages.py  test_averages_bath.py  test_fixed_density_loop.py  test_hybridization.py  test_instances.py  test_mixing.py  test_mixing_cf.py  test_spectral.py  test_vca.py
tests/test_diagonalization/: model_1D_8.py  model_2x2_2C_8b_C2v_L.py  test_pole_distribution.py
tests/test_files/: model_1D_4.py  model_1D_4_C2.py  model_graphene_bath.py  model_hartree.py  record_2x2_anom.py  record_spin.py  test_averages.py  test_averages_bath.py  test_berry.py  test_cdmft.py  test_fixed_density_loop.py  test_hartree.py  test_hybridization.py  test_instances.py  test_mixing.py  test_mixing2.py  test_mixing_cf.py  test_spectral.py  test_vca.py
